# assignments

./: README.md  pyproject.toml
problem1/: problem1.py  test_problem1.py
problem2/: problem2.py  test_problem2.py
problem3/: problem3.py  test_problem3.py
problem4/: problem4.py  test_problem4.py
problem5/: test_problem5.py
problem6/: problem6.py  test_problem6.py
